# varman-backend

./: .dockerignore  .env.example  .gitignore  AMOR.txt  Dockerfile  Leetcode2769.java  README.md  SecureFetchTester.java  ServerCmds.txt  SurgicalProtectionEngine.java  celery_worker.py  config.py  db.py  docker-compose.yml  download_vae.py  main.py  migrate_db.py  pyproject.toml  pytest.ini  requirements.txt  scratch_ensemble_test.py  test_download.py  test_gpu.py  varman.db
api/: __init__.py
api/routes/: __init__.py  protect.py
app/: __init__.py  config.py  database.py  main.py  uploads.py
app/auth/: router.py  schemas.py  security.py
app/models/: __init__.py  protected_image.py  user.py
app/protection/: __init__.py  diff_jpeg.py  engine.py  face_mask.py  quality.py  surrogate_models.py  watermark.py
app/routes/: analytics.py  (+2 more)
benchmarks/: benchmark.py  varman_benchmark.py
core/: __init__.py  config.py  security.py  uploads.py
docs/: ARCHITECTURE.md  DOCKER_USAGE.md  TESTING_NOTES.md  varman_v1_postmortem.md
experiments/: baseline_clip_resnet.md  facenet_whitebox.md
models/: __init__.py  protected_image.py
services/: amor_service.py  bloom_service.py  db_service.py  detection_service.py  image_pipeline.py  noise_service.py  notification_service.py  recognition_service.py  unknown_service.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_engine.py  test_images.py  test_phash_persistence_and_radar.py  test_project_integrity.py  test_security_controls.py  test_stability_hardening.py
utils/: armor_validator.py  face.py  hashing.py
(+11 files in other folders)
