[project]
name = "amor-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", ".venv", "datasets", "weights"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
